Fix gallery photos wraping in portfolio section

--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -36,7 +36,12 @@
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+
+    @media only screen and (max-width: $mq-md) {
+        grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+    }
 
     &__item {
         width: 100%;
